--- a/xyz_Dashboard/src/index.css
+++ b/xyz_Dashboard/src/index.css
@@ -142,3 +142,11 @@ button:hover {
   margin-top: 15px;
   box-shadow: 0px 2px 6px rgba(0,0,0,0.08);
 }
+.container {
+  height: 100vh;
+  overflow: hidden;
+}
+
+.dashboard-container {
+  height: 100%;
+}
